syntax = "proto3";
option java_multiple_files = true;
option go_package = "apigee/examples/grpcserver";
package com.apigee.examples.grpc.server.grpcserver;

message MessengerRequest {
  string msg = 1;
}

message MessengerResponse {
  string msg = 1;
}

service MessengerService {
  rpc getGreeting(MessengerRequest) returns (MessengerResponse);
  rpc getPirateGreeting(MessengerRequest) returns (MessengerResponse);
}
